deployment/cloud/ml_consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-consumer
  labels:
    app: ml-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-consumer
  template:
    metadata:
      labels:
        app: ml-consumer
    spec:
      containers:
        - name: ml-consumer
          image: rdsea/ml_consumer:v3
